<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">CoT Explorer</string>
    <!-- description -->
    <string name="app_desc">This plugin shows all the CoTs</string>

    <!-- SharedPreferences Keys -->
    <string name="key_cotexplorer_preferences">plugin_cotexplorer_preferences</string>

    <!-- Settings / Preferences -->
    <string name="preferences_title">CoT Explorer Plugin Preferences</string>
    <string name="preferences_summary">Allow configuration of CoT Explorer</string>

    <string name="set_enabled">Enable CoT Logging</string>
    <string name="set_set_enabled_summary">This is will impact performance. Don\'t leave it always on</string>

    <string name="set_send">Show Sent CoT</string>
    <string name="set_send_summary">Toggle to display all the sent CoT</string>

    <string name="set_recv">Show Recv CoT</string>
    <string name="set_recv_summary">Toggle to display all the received CoT</string>

    <string name="set_type">Filter by CoT type</string>
    <string name="set_type_summary">Enter a CoT type to filter by</string>
</resources>
